--- a/views/header.tt
+++ b/views/header.tt
@@ -3,7 +3,10 @@
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">netlib.re</a>
+            <a class="navbar-brand" href="/">NetLib.re</a>
+            <p class="navbar-brand">
+            Ton nom de domaine gratuit, administrable facilement.
+            </p>
         </div>
     </div>
 </div>
