--- a/views/header.tt
+++ b/views/header.tt
@@ -5,7 +5,7 @@
         <div class="navbar-header">
             <a class="navbar-brand" href="/">NetLib.re</a>
             <p class="navbar-brand">
-            Ton nom de domaine gratuit, administrable facilement.
+            Un nom de domaine gratuit, administrable facilement.
             </p>
         </div>
     </div>
